/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.13/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

sourceSets {
    main {
        java {
            srcDirs = ['src/geoanalytique']
        }
    }
}

jar {
    archiveFileName = "geo-analytique.jar"  // Nom du fichier JAR
    destinationDirectory = file("archives")  // Dossier où le JAR sera placé
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit test framework.
    testImplementation libs.junit

    // This dependency is used by the application.
    implementation libs.guava
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'geoanalytique.Main'
}

tasks.withType(JavaCompile).configureEach {
    destinationDirectory = file("bin")
}

tasks.withType(JavaExec).configureEach {
    classpath = files("bin") + sourceSets.main.runtimeClasspath
}

tasks.register('generateDocs', Javadoc) {
    source = sourceSets.main.allJava
    destinationDir = file("doc")
}